vlib/v/checker/tests/inout/assign_expr_type_err_c.vv
fn main() {
	mut a := 'hello'
	a -= 'world'
}